netpols/with-host-policies/ccnp-host-infra.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-infra
spec:
  description: Cilium host policy set for infra nodes
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/infra: ""
  ingress:
  # Data plane connectivity from everywhere to Nginx ingress controller
  - toPorts:
    - ports:
        # Ingress HTTP
      - port: "80"
        protocol: TCP
        # Ingress HTTPS
      - port: "443"
        protocol: TCP
