netpols/with-host-policies/cnp-infra-goldpinger.yaml
# -- Default rule
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-within-namespace
  namespace: goldpinger
spec:
  description: Allow NS internal traffic, block everything else
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - {}
  egress:
  - toEndpoints:
    - {}
# -- Egress rules
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: goldpinger-to-kapi
  namespace: goldpinger
spec:
  description: Allow Goldpinger to reach KAPI
  endpointSelector:
    matchLabels:
      k8s:app: goldpinger
  egress:
  - toEntities:
    - host
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
